# PFAS-Birthweight

./: README.md  _quarto.yml  analysis.py  api.qmd  app.py  getting-started.qmd  index.qmd  pyproject.toml  technical-report.qmd
docs/: api.html  gc_analysis.html  getting-started.html  index.html  search.json  technical-report.html
pfas_birthweight/: __init__.py  analysis.py  data.py  pipeline.py  quickrun.py  test_ga.py
pfas_birthweight/data/: Birthweight_Counts.xls  Gestational_age.xls  UCMR_min_reporting_level.xlsx  birth_weights.csv  ~$UCMR_min_reporting_level.xlsx
