[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pfas-birthweight"
version = "0.1.2"
description = "Build a county-year panel dataset linking PFAS drinking water contamination to birth weight outcomes."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

dependencies = [
    "pandas",
    "numpy",
    "openpyxl",
    "geopandas>=1.0.1",
    "matplotlib>=3.9.4",
    "statsmodels>=0.14.6",
    "plotly>=6.7.0",
    "streamlit>=1.50.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pfas_birthweight*"]

[tool.setuptools.package-data]
"pfas_birthweight.data" = ["*.xlsx", "*.csv", "*.txt"]
